<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupTwo"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_back_arrow"
            android:padding="5dp"
            android:contentDescription="@string/back_arrow" />

        <TextView
            android:id="@+id/signup2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cormorant_garamond_medium"
            />

        <TextView
            android:id="@+id/signup2_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_subtitle"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/eb_garamond"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_faculty"
                android:fontFamily="@font/eb_garamond"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <RadioGroup
                android:id="@+id/rg_faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="10dp"
                android:theme="@style/CustomRadioTheme">

                <RadioGroup
                    android:id="@+id/rg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/rb_SOB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:fontFamily="@font/sofia"
                        />

                    <RadioButton
                        android:id="@+id/rb_SCS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/computing_science"
                        android:layout_marginStart="45dp"
                        android:fontFamily="@font/sofia"
                        />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/rb_SOE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/education"
                        android:fontFamily="@font/sofia"
                        android:layout_marginTop="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rb_SIR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ir"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sofia"
                        />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/rb_SOJ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journalism"
                        android:fontFamily="@font/sofia"
                        android:layout_marginTop="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rb_RLS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/sofia"
                        android:text="@string/law"/>

                </RadioGroup>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_year"
                android:fontFamily="@font/eb_garamond"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <RadioGroup
                android:id="@+id/rg_year"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:theme="@style/CustomRadioTheme">

                <RadioButton
                    android:id="@+id/rb_One"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:fontFamily="@font/sofia"
                    android:onClick="onYearClicked"/>

                <RadioButton
                    android:id="@+id/rb_Two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:fontFamily="@font/sofia"
                    android:onClick="onYearClicked"
                    />

                <RadioButton
                    android:id="@+id/rb_Three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:fontFamily="@font/sofia"
                    android:onClick="onYearClicked"
                    />

                <RadioButton
                    android:id="@+id/rb_Four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:fontFamily="@font/sofia"
                    android:onClick="onYearClicked"
                    />
            </RadioGroup>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/next2_cardView"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#70778b"
            app:cardCornerRadius="15dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/signup_next"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:fontFamily="@font/rye"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/eb_garamond"
            />

        <TextView
            android:id="@+id/login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/log_in"
            android:textColor="#111d3f"
            android:textSize="25sp"
            android:fontFamily="@font/life_savers_bold"
            />
    </LinearLayout>

</ScrollView>