<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardCornerRadius="30dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#ebf5f0"
        >

        <ImageView
            android:id="@+id/clubBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/floral"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg_club_card"
            />

        <!-- Height is 160 Width is 190 -->
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/clubLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/beyoulogo"
                android:contentDescription="@string/club_logo_image"/>

            <TextView
                android:id="@+id/clubName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club_title"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:fontFamily="@font/eb_garamond"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />


            <TextView
                android:id="@+id/clubSlogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club_slogan"
                android:textSize="22sp"
                android:textColor="#ebf5f0"
                android:fontFamily="@font/boogaloo"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:id="@+id/llInfoJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/childcardviewbg"
                android:padding="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textSize="18sp"
                    android:textColor="#D76E6E6D"
                    android:textAlignment="center"
                    android:paddingBottom="3dp"
                    app:drawableTopCompat="@drawable/round_info"
                    />

                <TextView
                    android:id="@+id/tvJoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join"
                    android:textSize="18sp"
                    android:textColor="#D76E6E6D"
                    android:textAlignment="center"
                    android:layout_marginStart="50dp"
                    android:paddingBottom="3dp"
                    app:drawableTopCompat="@drawable/join_icon"
                    />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>