<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".clubs.TcMusic">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="660dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/clubBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/BeYou"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bg_club_card"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/klabTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cormorant_garamond_medium"
                android:text="MUSIC CLUB"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tcTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/eb_garamond"
                android:text="@string/terms_conditions"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tcSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/eb_garamond"
                android:padding="8dp"
                android:text="@string/tcDesc"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tcClub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/eb_garamond"
                    android:padding="8dp"
                    android:text="@string/beyou_tc"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </ScrollView>

            <CheckBox
                android:id="@+id/cbAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:text="@string/agreeing_to_TC"
                android:clickable="true"
                android:focusable="true"
                android:button="@drawable/round_check"
                android:paddingStart="5dp"
                />

            <LinearLayout
                android:id="@+id/llInfoJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="#2370778B"
                    app:cardCornerRadius="15dp"
                    style="@style/MyButtonStyle"
                    android:theme="@style/CustomButton"
                    android:text="@string/cancel_joining"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/life_savers_bold"/>

                <Button
                    android:id="@+id/joinButton"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="180dp"
                    app:cardBackgroundColor="#2370778B"
                    app:cardCornerRadius="15dp"
                    style="@style/MyButtonStyle"
                    android:theme="@style/CustomButton"
                    android:text="@string/joining"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/life_savers_bold"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>